--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- .about-us:hover #sublist daje możliwość rozwijania niwidocznej listy -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -125,6 +124,7 @@
     <div class="submit" style="cursor:pointer">WYŚLIJ</div>
     <div class="clear"></div>
   </div>
+  </div>
 </section>
 
 <footer>
@@ -140,5 +140,6 @@
   </div>
   <div class="clear"></div>
 </foter>
+<script src="js/app.js"></script>
 </body>
 </html>
